--- a/game/index.html
+++ b/game/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | WSGame</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/NW.json");
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/Build.json");
     </script>
   </head>
   <body>
