--- a/itch-link.html
+++ b/itch-link.html
@@ -20,6 +20,6 @@
     </style>
 </head>
 <body>
-    <iframe src="http://magearena.com" frameborder="0"></iframe>
+    <iframe src="https://magearena.com" frameborder="0"></iframe>
 </body>
 </html>
